# umineko-steam-spanish

./: .gitignore  README.md  pyproject.toml
question_arcs/: main.py
question_arcs/translator/: question_translator.py
question_arcs/util/: characters.py  fixes.py  lines.py  logging.py  translate_progressive.py  translation_status.py
